WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230495
[Cocoa] Videos sometimes don't render when loaded in the GPU process
https://bugs.webkit.org/show_bug.cgi?id=230495
Summary
[Cocoa] Videos sometimes don't render when loaded in the GPU process
Eric Carlson
Reported
2021-09-20 12:02:07 PDT
Videos sometimes don't render when loaded in the GPU process
Attachments
Patch
(9.37 KB, patch)
2021-09-20 13:13 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch for landing
(9.59 KB, patch)
2021-09-20 13:20 PDT
,
Eric Carlson
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(10.29 KB, patch)
2021-09-20 13:33 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2021-09-20 12:02:29 PDT
rdar://83205407
Eric Carlson
Comment 2
2021-09-20 13:13:42 PDT
Created
attachment 438717
[details]
Patch
Jer Noble
Comment 3
2021-09-20 13:15:25 PDT
Comment on
attachment 438717
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=438717&action=review
r=me with nits:
> Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxy.cpp:244 > + ALWAYS_LOG(LOGIDENTIFIER);
Maybe, `ALWAYS_LOG(LOGIDENTIFIER, visible)` ?
> Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxy.cpp:356 > + ALWAYS_LOG(LOGIDENTIFIER);
Maybe, `ALWAYS_LOG(LOGIDENTIFIER, m_player->readyState())` ?
Eric Carlson
Comment 4
2021-09-20 13:19:49 PDT
Comment on
attachment 438717
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=438717&action=review
>> Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxy.cpp:244 >> + ALWAYS_LOG(LOGIDENTIFIER); > > Maybe, `ALWAYS_LOG(LOGIDENTIFIER, visible)` ?
Good idea.
>> Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxy.cpp:356 >> + ALWAYS_LOG(LOGIDENTIFIER); > > Maybe, `ALWAYS_LOG(LOGIDENTIFIER, m_player->readyState())` ?
Ditto
Eric Carlson
Comment 5
2021-09-20 13:20:49 PDT
Created
attachment 438718
[details]
Patch for landing
Eric Carlson
Comment 6
2021-09-20 13:33:18 PDT
Created
attachment 438721
[details]
Patch for landing
EWS
Comment 7
2021-09-20 16:08:08 PDT
Committed
r282789
(
241924@main
): <
https://commits.webkit.org/241924@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 438721
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug